k8s_config/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend
  namespace: fullstack
  labels:
    app:  backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  backend
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  backend
        image:  hasankarademir/backend-app:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 128Mi
        livenessProbe:
          tcpSocket:
            port: 444
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  444
          name:  backend
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
