k8s_config/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontendapp
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontendapp
        image: hasankarademir/frontend-app:latest
        ports:
        - containerPort:  80
          name: frontend
