k8s_config/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend
    protocol: TCP
    port: 444
    targetPort: 444
