k8s_config/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendsvc
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
