k8s_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-uri: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fullstack.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontendsvc
            port:
              number: 80
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 444
